feat: Create authors

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -15,6 +15,8 @@
             {% block content %}
             
             {% endblock content %}
+
+            {% include "global/partials/_pagination.html" %}
         </main>
         {% include "global/partials/_footer.html" %}
     </body>
