--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html lang="pt-BR">
@@ -19,5 +20,7 @@
             {% include "global/partials/_pagination.html" %}
         </main>
         {% include "global/partials/_footer.html" %}
+        <script src="{% static 'global/js/scripts.js' %}"></script>
+
     </body>
-</html>
+</html>"
