feat: menu - profile

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        {% include "global/partials/_menu.html" %}
         {% include "global/partials/_header.html" %}
         {% include "global/partials/_search.html" %}
 
